tests/testthat/prod/fail/geo/wfs-f93f5d.R
structure(list(url = "geo/wfs?request=GetCapabilities", status_code = 500L, 
    headers = structure(list(`access-control-allow-origin` = "*", 
        `x-frame-options` = "SAMEORIGIN", `cache-control` = "max-age=0, must-revalidate", 
        `content-disposition` = "inline; filename=geoserver-GetCapabilities.application", 
        `content-encoding` = "gzip", `content-type` = "application/xml", 
        `transfer-encoding` = "chunked", date = "Fri, 03 Feb 2023 15:33:09 GMT"), class = c("insensitive", 
    "list")), all_headers = list(list(status = 500L, version = "HTTP/1.1", 
        headers = structure(list(`access-control-allow-origin` = "*", 
            `x-frame-options` = "SAMEORIGIN", `cache-control` = "max-age=0, must-revalidate", 
            `content-disposition` = "inline; filename=geoserver-GetCapabilities.application", 
            `content-encoding` = "gzip", `content-type` = "application/xml", 
            `transfer-encoding` = "chunked", date = "Fri, 03 Feb 2023 15:33:09 GMT"), class = c("insensitive", 
        "list")))), cookies = structure(list(domain = logical(0), 
        flag = logical(0), path = logical(0), secure = logical(0), 
        expiration = structure(numeric(0), class = c("POSIXct", 
        "POSIXt")), name = logical(0), value = logical(0)), row.names = integer(0), class = "data.frame"), 
    content = charToRaw(""), 
    date = structure(1675438389, class = c("POSIXct", "POSIXt"
    ), tzone = "GMT"), times = c(redirect = 0, namelookup = 0.002201, 
    connect = 0.028796, pretransfer = 0.065511, starttransfer = 0.112988, 
    total = 0.174872)), class = "response")
